- updated translations, other minor fixes
Changed files:
    nethack.desktop -> 1.3

--- a/nethack.desktop
+++ b/nethack.desktop
@@ -1,5 +1,9 @@
 [Desktop Entry]
-Name=nethack
+Name=Nethack
+Name[ar]=نت هاك
+Name[eo]=Rethako
+Name[lv]=TīklaHacks
+Name[ven]=Vhukwamani ho Netaho
 Comment=An adventure into the Mazes of Menace
 Comment[pl]=Przygoda w Labiryntach Groźby
 Icon=nethack.png
