--- a/nethack.desktop
+++ b/nethack.desktop
@@ -8,7 +8,7 @@ Comment=An adventure into the Mazes of Menace
 Comment[pl]=Przygoda w Labiryntach Groźby
 Icon=nethack.png
 Exec=/usr/games/nethack
-Terminal=0
+Terminal=false
 Type=Application
 Encoding=UTF-8
 # vi: encoding=utf-8
