--- a/nethack.desktop
+++ b/nethack.desktop
@@ -3,7 +3,7 @@ Name=Nethack
 Name[ar]=نت هاك
 Name[eo]=Rethako
 Name[lv]=TīklaHacks
-Name[ven]=Vhukwamani ho Netaho
+Name[ve]=Vhukwamani ho Netaho
 Comment=An adventure into the Mazes of Menace
 Comment[pl]=Przygoda w Labiryntach Groźby
 Icon=nethack.png
