--- a/nethack.desktop
+++ b/nethack.desktop
@@ -6,10 +6,9 @@ Name[lv]=TīklaHacks
 Name[ve]=Vhukwamani ho Netaho
 Comment=An adventure into the Mazes of Menace
 Comment[pl]=Przygoda w Labiryntach Groźby
-Icon=nethack.png
+Icon=nethack
 Exec=/usr/games/nethack
 Terminal=false
 Type=Application
-Encoding=UTF-8
 Categories=Game;RolePlaying;
 # vi: encoding=utf-8
